@@ -4,7 +4,7 @@ Easy:
  * Better documentation.
  * Support scripts, documentation and Makefiles for various
    systems.
- * Logging options.
+ * Better logging options.
  * ICMP support.
  * Better Makefiles.
 
@@ -37,4 +37,4 @@ Hard:
    This is possible, but tiresome, and will require an optimiser
    if the generated rulesets are not to Suck.
 
-$Id: TODO,v 1.3 2001/10/06 17:44:04 matthew Exp $
+$Id: TODO,v 1.4 2001/10/06 18:25:16 matthew Exp $
