@@ -1,6 +1,7 @@
 Recent: testing begins
 	add transproxy and masquerading support
 	fix syntax problems with iptables output
+	simple logging support (logs only initiating packets)
 
 0.3:
 	add ipfilter backend
@@ -19,4 +20,4 @@ Recent: testing begins
 	iptables driver
 	a few bugs
 
-$Id: HISTORY,v 1.5 2001/10/06 17:22:09 matthew Exp $
+$Id: HISTORY,v 1.6 2001/10/06 18:25:16 matthew Exp $
